--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,7 +6,7 @@ on: [push, workflow_dispatch]
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: rg-eshoponweb-SOUM
-  LOCATION: eastus2
+  LOCATION: Canada Central
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: b76c87d1-f6ca-4f6a-b97e-db782b3db3b3
   WEBAPP-NAME: eshoponweb-webapp48751531
